<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.AccountActivity">

    <LinearLayout
        android:id="@+id/account_visitor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal" >

        <ImageView
            android:id="@+id/anonymous_account_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_margin="20dp"
            android:src="@drawable/anonymous_account"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visitor_login_prompt"
            android:textAppearance="@android:style/TextAppearance.Large"/>

        <Button
            android:id="@+id/btn_login_account_page"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/login"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/account_logined"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/account_uername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
<<<<<<< HEAD
            android:text="User Name placeholer"
=======
            android:text="@string/user_name_placeholer"
>>>>>>> 796ba1d5e3bcba6ad59bad7b8161d18b4aad3f5b
            android:textAppearance="?android:textAppearanceLarge" />

        <Button
            android:id="@+id/btn_Purchase_History"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
<<<<<<< HEAD
            android:layout_margin="16dp"
            android:text="Purchase History"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="Temporary Checkout Confirmation" />
=======
            android:layout_margin="16dp"
            android:text="@string/purchase_history"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/temporary_checkout_confirmation" />
>>>>>>> 796ba1d5e3bcba6ad59bad7b8161d18b4aad3f5b

        <Button
            android:id="@+id/btn_account_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
<<<<<<< HEAD
            android:text="logout" />
=======
            android:text="@string/logout" />
>>>>>>> 796ba1d5e3bcba6ad59bad7b8161d18b4aad3f5b

    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/account_page_navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</RelativeLayout>